Forgot to update the HTML file before the last commit :)

--- a/sdi_project2/sdi-project2.html
+++ b/sdi_project2/sdi-project2.html
@@ -11,12 +11,15 @@
     <h2>Project 2</h2>
 </header>
 <article>
-<p>In this space you should provide a short (one paragraph) explanation of your theme and why you chose it.</p>
-<p>You may also use this space to explain any elements of your code story that may not be entirely clear.  For example, if your theme is thirteenth century Italian poetry, not everyone may be familiar with that.</p>
-<p>Don't forget to replace all of the capitalized elements in this template with your information.  Your term number should be in a <em>yymm</em> format, including the year and the month.</p>
+<p>
+	This "story" is part 2 of project 1. In this part we find out who has tickets and if they
+	have them all the way to the final destination. So even though our final, final destination
+	is Indiana, the last Airport we go to is in Chicago because that's where the cheapest airfair
+	is to. That's why the last half of the app tests to see who has a reserved seat to Chicago.
+</p>
 </article>
 <footer>
-    <p>COMPLETION DATE, Andrew Helmkamp</p>
+    <p>3 Nov 2012, Andrew Helmkamp</p>
 </footer>
 <script type="text/javascript" src="helmkamp_andrew_assignment2.js"></script>
 </body>
