added a reference for my library

--- a/sdi-project4/sdi-project4.html
+++ b/sdi-project4/sdi-project4.html
@@ -16,6 +16,7 @@
 <footer>
     <p>COMPLETION DATE, Andrew Helmkamp</p>
 </footer>
+<script type="text/javascript" src="helmkamp_andrew_library.js"></script>
 <script type="text/javascript" src="helmkamp_andrew_assignment4.js"></script>
 </body>
 </html>
