--- a/sdi-project4/sdi-project4.html
+++ b/sdi-project4/sdi-project4.html
@@ -16,7 +16,9 @@
 <footer>
     <p>COMPLETION DATE, Andrew Helmkamp</p>
 </footer>
-<script type="text/javascript" src="helmkamp_andrew_library.js"></script>
+<script type="text/javascript" src="helmkamp_andrew_stringLibrary.js"></script>
+<script type="text/javascript" src="helmkamp_andrew_mathLibrary.js"></script>
+<script type="text/javascript" src="helmkamp_andrew_arrayLibrary.js"></script>
 <script type="text/javascript" src="helmkamp_andrew_assignment4.js"></script>
 </body>
 </html>
