updated the completion date

--- a/sdi-project4/sdi-project4.html
+++ b/sdi-project4/sdi-project4.html
@@ -14,7 +14,7 @@
 <p>You don't need to put anything here for this project.  Though you can if you want to!</p>
 </article>
 <footer>
-    <p>COMPLETION DATE, Andrew Helmkamp</p>
+    <p>15 Nov 2012, Andrew Helmkamp</p>
 </footer>
 <script type="text/javascript" src="helmkamp_andrew_stringLibrary.js"></script>
 <script type="text/javascript" src="helmkamp_andrew_mathLibrary.js"></script>
